# twitch_notif

./: .gitignore  main.py  notif_template.md  pyproject.toml
app/: app.py  config.py  database.py  server.py
app/tg_integration/: bot.py
