[project]
name = "twitch-notif"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "mypy>=1.16.1",
    "pytelegrambotapi>=4.27.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]


[tool.mypy]
disable_error_code = ['import-untyped']
